additional rounding rules